--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ body, html {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 code {
