--- a/src/Scenes/MainScene.module.scss
+++ b/src/Scenes/MainScene.module.scss
@@ -1,3 +1,9 @@
 .points-counter{
   color: #15f419;
+  position: absolute;
+  font-family: monospace;
+  text-transform: uppercase;
+  width: fit-content;
+  font-size: 2rem;
+  padding: 10px;
 }
