--- a/src/Scenes/InitialMenuScene/InitialMenuScene.module.scss
+++ b/src/Scenes/InitialMenuScene/InitialMenuScene.module.scss
@@ -1,5 +1,5 @@
 .container {
-  background-color: #989898;
+  background-color: hsl(0, 0%, 60%);
   display         : flex;
   justify-content : center;
   align-items     : center;
