--- a/src/Components/SpaceShipSelector/SpaceShipSelector.module.scss
+++ b/src/Components/SpaceShipSelector/SpaceShipSelector.module.scss
@@ -1,6 +1,6 @@
 .main{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   gap: 15px;
   width: 100%;
   align-items: center;
