--- a/src/Components/SpaceShipVisualizer/SpaceShipVisualizer.module.scss
+++ b/src/Components/SpaceShipVisualizer/SpaceShipVisualizer.module.scss
@@ -1,23 +1,31 @@
-.main{
+.container{
+  max-width: 100%;
+}
+
+.main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
 }
 
-.space-ship-image{
-  width: 50vw;
+.space-ship-image {
+  width: 30vw;
   min-width: 300px;
+  min-height: fit-content;
+  max-width: fit-content;
 }
 
-.space-ship-title, .space-ship-description{
+.space-ship-title,
+.space-ship-description {
   width: 90%;
   text-align: center;
 }
 
-.space-ship-title{
+.space-ship-title {
   font-size: 2.15rem;
 }
 
-.space-ship-description{
+.space-ship-description {
   font-size: 1.15rem;
 }
