--- a/src/Scenes/InitialMenuScene/InitialMenuScene.module.scss
+++ b/src/Scenes/InitialMenuScene/InitialMenuScene.module.scss
@@ -1,10 +1,21 @@
+.menu-screen {
+  position: absolute;
+  top     : 0;
+  left    : 0;
+  width   : 100%;
+  height  : 100%;
+  z-index : 999;
+  transition: all 2s ease;
+  background-color: #cdcdcdcb;
+}
+
 .container {
-  background-color: hsl(0, 0%, 60%);
   display         : flex;
   justify-content : center;
   align-items     : center;
   flex-wrap       : wrap;
-  height: 100%;
+  height          : 100%;
+  width           : 100%;
 }
 
 .title {
@@ -14,17 +25,15 @@
 }
 
 .start-button {
-  padding: 8px;
-  border: 3px solid #a611ff;
-  // background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(109,87,120,1) 100%);
-  transition: all .5s ease;
-  color: #222;
+  padding      : 8px;
+  border       : 3px solid #a611ff;
+  transition   : all .5s ease;
+  color        : #222;
   border-radius: 8px;
-  font-size: 1.45rem;
+  font-size    : 1.45rem;
 }
 
-.start-button:hover{
-  // background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(53,4,77,1) 17%, rgba(108,9,121,1) 35%, rgba(66,87,173,1) 60%, rgba(149,0,255,1) 100%);
-  transform: scale(1.1);
+.start-button:hover {
+  transform : scale(1.1);
   box-shadow: 2px 2px 8px #000;
 }
